# v6d

./: go.work
go/vineyard/: go.mod
go/vineyard/pkg/common/log/: deleg.go  log.go
k8s/: Dockerfile  Makefile  go.mod  go.sum  yq.1
k8s/apis/k8s/v1alpha1/: backup_webhook.go  csidriver_webhook.go  globalobject_webhook.go  localobject_webhook.go  operation_webhook.go  recover_webhook.go  sidecar_webhook.go  vineyardd_types.go  vineyardd_webhook.go  webhook_test.go  zz_generated.deepcopy.go
k8s/cmd/commands/client/: put.go
k8s/cmd/commands/manager/: manager.go
k8s/cmd/commands/util/: client.go  operator.go  parse_test.go
k8s/config/crd/bases/: k8s.v6d.io_backups.yaml  k8s.v6d.io_csidrivers.yaml  k8s.v6d.io_globalobjects.yaml  k8s.v6d.io_localobjects.yaml  k8s.v6d.io_operations.yaml  k8s.v6d.io_recovers.yaml  k8s.v6d.io_sidecars.yaml  k8s.v6d.io_vineyardds.yaml
k8s/config/rbac/: role.yaml
k8s/config/webhook/: manifests.yaml
k8s/pkg/csidriver/: controller.go
k8s/pkg/log/: log.go
k8s/pkg/schedulers/: scheduling.go
k8s/pkg/templates/operation/: distributed-assembly-job.yaml  local-assembly-job.yaml
k8s/test/hack/: build-kind-cluster-with-local-registry.sh  prepare-e2e.sh
rust/: Cargo.toml
rust/vineyard/: Cargo.toml
rust/vineyard-polars/: Cargo.toml
rust/vineyard-polars/src/ds/: dataframe.rs  dataframe_test.rs
rust/vineyard/src/common/util/: arrow.rs
rust/vineyard/src/ds/: arrow.rs
