[workspace]
members = [
    "vineyard",
    "vineyard-polars",
    "vineyard-integration-testing",
]
resolver = "2"

[workspace.package]
version = "0.18.1"
homepage = "https://v6d.io"
repository = "https://github.com/v6d-io/v6d.git"
authors = ["Vineyard <vineyard@alibaba-inc.com>"]
license = "Apache-2.0"
keywords = ["vineyard"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2021"
readme = "README.md"

[workspace.dependencies]
arrow-array = { version = "53.4.1", features = ["ffi"] }
arrow-buffer = "53.4.1"
arrow-ipc = "53.4.1"
arrow-schema = { version = "53.4.1", features = ["ffi"] }
arrow-data = { version = "53.4.1", features = ["ffi"] }
ctor = "0.2"
downcast-rs = "1.2"
env_logger = "0.9"
futures = "0.3"
gensym = "0.1"
inline-python = "0.12"
itertools = "0.11"
lazy_static = "1"
log = "0.4"
memmap2 = "0.7"
num-traits = ">= 0.2"
num-derive = ">= 0.4"
parking_lot = "0.12"
polars-arrow = "0.52"
polars-core = "0.52"
rand = "0.8"
sendfd = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
spectral = "0.6"
static_str_ops = "0.1.2"
vineyard = { version = "0.18.1", path = "./vineyard" }
vineyard-polars = { version = "0.18.1", path = "./vineyard-polars" }
vineyard-integration-testing = { version = "0.18.1", path = "./vineyard-integration-testing" }

[patch.crates-io]
arrow = { path = "/home/paul/repos/arrow-rs/arrow" }
arrow-array = { path = "/home/paul/repos/arrow-rs/arrow-array" }
arrow-buffer = { path = "/home/paul/repos/arrow-rs/arrow-buffer" }
arrow-data = { path = "/home/paul/repos/arrow-rs/arrow-data" }
arrow-ipc = { path = "/home/paul/repos/arrow-rs/arrow-ipc" }
arrow-schema = { path = "/home/paul/repos/arrow-rs/arrow-schema" }
arrow-cast = { path = "/home/paul/repos/arrow-rs/arrow-cast" }
